# Sirel

./: .gitignore  CMakeLists.txt  README.md  rest-client.h
Sirel-iOS.xcodeproj/: project.pbxproj
Sirel-iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sirel-iOS.xcodeproj/project.xcworkspace/xcuserdata/evan.xcuserdatad/: UserInterfaceState.xcuserstate
Sirel-iOS.xcodeproj/xcuserdata/evan.xcuserdatad/xcschemes/: xcschememanagement.plist
core/: CMakeLists.txt  generic_request.h
core/sources/: generic_request.c
http/: CMakeLists.txt  http_request.h  http_response.h
http/apple/: apple_http_request.h  apple_http_request.m  http_request.apple.h  http_request.apple.m
http/private/: http_request.private.h
oauth2/: CMakeLists.txt  oauth2_request.h
oauth2/sources/: oauth2_request.c
sirel/: CMakeLists.txt  sirel.h  sirel_client.h  sirel_request.h  sirel_response.h  sirel_types.h
sirel/core/: core.h  request.h  types.h
sirel/http/: CMakeLists.txt  http.h  http_request.h
sirel/http/apple/: http_request.apple.h
sirel/http/private/: http_request.private.h
sirel/platform/apple/: CMakeLists.txt  sirel_client_apple.m  sirel_request_apple.h  sirel_request_apple.m
sirel/sources/: sirel_request.c
sireley/: CMakeLists.txt  sireley.h  sireley_client.h  sireley_request.h  sireley_response.h  sireley_types.h
sireley/platform/: sireley_request.platform.h
sireley/platform/apple/: CMakeLists.txt  sireley_client_apple.m  sireley_request_apple.h  sireley_request_apple.m
sireley/private/: private.sireley_request.h
sireley/sources/: sireley_request.c
sireley/sources/apple/: apple.sireley_request.h  apple.sireley_request.m  sireley_client.m  sireley_request.apple.h  sireley_request.apple.m
sources/: platform.h  rest-client.c
sources/Apple/: rest-client.m
tests/: CMakeLists.txt
tests/oauth2/: CMakeLists.txt  oauth2.c  oauth2.h
tests/simple/: CMakeLists.txt  simple.c
